--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             <li class="items">Puntualidad</li>
             <li class="items">Limpieza</li>
           </ul><img
-            src="/img diferenciales/diferenciales.jpg"
+            src="/img-diferenciales/diferenciales.jpg"
             class="imagen-diferenciales" alt="Imagen de persona siendo afeitada"
           />
         </div>
