--- a/index.html
+++ b/index.html
@@ -83,14 +83,14 @@
       </section>
 
       <section class="diferenciales">
-        <h3 class="titulo-principal">Diferenciales</h3>
+        <h3 class="titulo-principal">Caracteristas</h3>
 
         <div class="contenido-diferenciales">
           <ul class="lista-diferenciales">
             <li class="items">Atención personalizada a los clientes</li>
-            <li class="items">Espacio diferenciado</li>
+            <li class="items">Espacio personalizado</li>
             <li class="items">Localización</li>
-            <li class="items">Profesesionales calificados</li>
+            <li class="items">Profesionales calificados</li>
             <li class="items">Puntualidad</li>
             <li class="items">Limpieza</li>
           </ul><img
