Ajuste texto erroneo

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       </section>
 
       <section class="diferenciales">
-        <h3 class="titulo-principal">Caracteristas</h3>
+        <h3 class="titulo-principal">Caracteristicas</h3>
 
         <div class="contenido-diferenciales">
           <ul class="lista-diferenciales">
